# rssdeduper

./: Cargo.toml  LICENSE  README.md  feed  feedly-target.opml  feeds.json
rss/: feedly-source.opml  feedly-target.opml
src/: ids.rs  main.rs  opml.rs  rss.rs  timer.rs  utilities.rs
systemd/: rssdeduper.service
testdata/: ausland.rss  bbcmundo.xml  channel1.rss  channel1_dedup.rss  channel2.rss  channel2_dedup.rss  dupitemssamechannel.rss  elpaisportada.xml  fazfinanzen.rss  fazfinanzen2.rss  feedly-source.opml  feedly-source_iteration2.opml  feedly-target_iteration1.opml  feedly-target_iteration2.opml  feedly-with-new-attribute.opml  feeds.json  feeds_iteration1.json  feedwithatomlink.rss  news.rss  schlagzeilen.rss  schlagzeilen_old.rss
