[package]
name = "rssfeed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1.10.2"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
url = "2.4.1"
uuid = { version = "1.5.0", features = ["v4"] }
xmltree = "0.10.3"
